<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_color"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_color"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="Amazon"
                            android:textColor="@color/black"
                            android:textSize="27dp" />

                        <ImageView
                            android:id="@+id/home_cart"
                            android:layout_width="47dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="200dp"
                            android:src="@drawable/cart" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="230sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="Deals of the Day"
                android:textColor="@color/black"
                android:textSize="23dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#8FCBED"
                    android:backgroundTint="@color/white"
                    android:padding="12dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes1"
                        android:layout_margin="5dp"
                        app:cardElevation="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1" />

                            <TextView
                                android:id="@+id/oddshoename"
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution 5\nRunning Shoes"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/oddshoeprice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:textColor="@color/black"
                                android:textSize="23dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes2"
                        android:layout_margin="5dp"
                        app:cardElevation="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes2" />

                            <TextView
                                android:id="@+id/evenshoename"
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Air\nMax Shoes"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/evenshoeprice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹9500"
                                android:textColor="@color/black"
                                android:textSize="23dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes3"
                        android:layout_margin="5dp"
                        app:cardElevation="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution 5\nRunning Shoes"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:textColor="@color/black"
                                android:textSize="23dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes4"
                        android:layout_margin="5dp"
                        app:cardElevation="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Air\nMax Shoes"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹9500"
                                android:textColor="@color/black"
                                android:textSize="23dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes5"
                        android:layout_margin="5dp"
                        app:cardElevation="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution 5\nRunning Shoes"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:textColor="@color/black"
                                android:textSize="23dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="Top Products"
                android:textColor="@color/black"
                android:textSize="23dp" />

            <ListView
                android:id="@+id/productslist"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="true"
                android:padding="20dp" />

            <TextView
                android:id="@+id/viewAllProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="right"
                android:text="VIEW ALL"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>