...
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="17dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="#FFE719"
                android:elevation="50dp"
                android:fontFamily="sans-serif"
                android:text="Add to Cart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
...
